--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 !Assignment2/
 !Assignment2/*
 !Assignment2/*/*
+
+!Assignment3/
+!Assignment3/LambdaFun
+!Assignment3/LambdaFun/*
+!Assignment3/LambdaFun/*/*
